[package]
name = "dynamic-loading-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
blake2b-rs = "0.1.5"

[dependencies]
ckb-std = "0.6.0"

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
